--- a/src/main/resources/static/css/re_default.css
+++ b/src/main/resources/static/css/re_default.css
@@ -1,21 +1,17 @@
 @charset "utf-8";
 
 @font-face {
-    font-family:'Noto Sans Korean';
+    font-family:'Segoe UI';
     font-style:normal;
     font-weight:400;
-    src: local('Noto Sans Regular'), local('NotoSans-Regular'),
-    url(/resources/font/NotoSansKR-Regular-Hestia.eot),
-    url(/resources/font/NotoSansKR-Regular-Hestia.eot?#iefix) format('embedded-opentype'),
-    url(/resources/font/NotoSansKR-Regular-Hestia.woff) format('woff'),
-    url(/resources/font/NotoSansKR-Regular-Hestia.otf) format('opentype');
+    src: local('Segoe UI'), local('Segoe UI'),
 }
 
 * { margin:0; padding:0;}
-body{font-family:'Noto Sans Korean','Dotum','돋음','굴림'; font-size:12px; color:#575757; line-height:1.3;}
+body{font-family:'Segoe UI','Dotum','돋음','굴림'; font-size:12px; color:#575757; line-height:1.3;}
 html, body { margin:0; padding:0; }
 table { margin:auto; border-collapse:collapse; border-spacing:0; empty-cells:show;}
-select, textarea {border:1px solid #B7B6B6; background:#FFF; font-family:'Noto Sans Korean','Dotum','돋음','굴림',Arial, Helvetica, sans-serif; font-size:12px; color:#575757; vertical-align:top;}
+select, textarea {border:1px solid #B7B6B6; background:#FFF; font-family:'Segoe UI','Dotum','돋음','굴림',Arial, Helvetica, sans-serif; font-size:12px; color:#575757; vertical-align:top;}
 form, ul, ol, dl, table, div, h1, h2, h3 ,h4, h5, h6 {margin:0;padding:0;}
 h1, h2, h3 ,h4, h5, h6{font-size:12px; text-decoration:none; font-weight:normal;}
 img, fieldset {border:0; margin:0; padding:0; }
@@ -26,7 +22,7 @@ legend{ text-indent:-5000px; line-height:0; font-size:0;  top:-1000px; left:0; p
 hr{display:none;}
 a {color:#666; text-decoration:none;}
 a:hover {color:#333; text-decoration:underline;}
-pre{font-family:'Noto Sans Korean','Dotum','돋음','굴림'; word-wrap: break-word;white-space: pre-wrap;white-space: -moz-pre-wrap;white-space: -pre-wrap;white-space: -o-pre-wrap;word-break:break-all;}/* 일부 운영체제에서 바탕체로 보일때가 있음 */
+pre{font-family:'Segoe UI','Dotum','돋음','굴림'; word-wrap: break-word;white-space: pre-wrap;white-space: -moz-pre-wrap;white-space: -pre-wrap;white-space: -o-pre-wrap;word-break:break-all;}/* 일부 운영체제에서 바탕체로 보일때가 있음 */
 
 #skipToContent a { overflow:hidden; display:block; width:0px; height:0px; /*margin-bottom:-1px;*/ text-align:center; color:#000;}
 #skipToContent a:focus, #skipToContent a:active {width:auto; height:auto; /*margin-bottom:5px;*/ padding:5px; background:#f2f2f2; border:1px solid #ddd;}
