--- a/src/main/resources/static/css/re_trade.css
+++ b/src/main/resources/static/css/re_trade.css
@@ -1428,7 +1428,7 @@ a.cmBtnRe { display: inline-block; padding: 10px 30px; border: 1px solid #d42a35
 .ewGuide .ew_price .ew_service td { font-size: 14px; padding: 10px 20px; }
 /* 내차사기 -검색 */
 .carSearch_topBanner { height: 50px; text-align:center;}
-.carSearch_cont { width: 1180px; margin: 30px auto 100px; font-family: 'Noto Sans Korean'; }
+.carSearch_cont { width: 1180px; margin: 30px auto 100px; font-family: 'Segoe UI'; }
 .carSearch_cont:before, .carSearch_cont:after { content: ""; display: table; }
 .carSearch_cont:after { clear: both; }
 .carSearch_cont select { visibility: hidden; }
@@ -1443,7 +1443,7 @@ a.cmBtnRe { display: inline-block; padding: 10px 30px; border: 1px solid #d42a35
 .carSearch_cont .detail_box .box_top .reset { float: right; width: 63px; height: 20px; margin-top: 5px; padding-top:5px; background: url("https://www.kcar.com/resources/images/content/buy/refresh_ico.png") no-repeat right 0; }
 .carSearch_cont .detail_box .quick_search { margin-top: 15px; position: relative; z-index: 13; }
 .carSearch_cont .detail_box .quick_search .ip_field { height: 35px; position: relative; padding: 7px 10px 7px 35px; border: 1px solid #ddd; border-top: 1px solid #555; box-sizing:border-box;}
-.carSearch_cont .detail_box .quick_search .ip_field input { width: 100%; height: 19px; line-height: 19px; border: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; background-color: #fff; font-family: 'Noto Sans Korean'; }
+.carSearch_cont .detail_box .quick_search .ip_field input { width: 100%; height: 19px; line-height: 19px; border: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; background-color: #fff; font-family: 'Segoe UI'; }
 .carSearch_cont .detail_box .quick_search .ip_field label { display: inline-block; width: 35px; height: 35px; position: absolute; top: 0; left: 0; text-indent: -9999px; background: url("https://www.kcar.com/resources/images/content/buy/search_ico.png") no-repeat center center; -webkit-background-size: 14px 14px; background-size: 14px 14px; }
 .carSearch_cont .detail_box .quick_search .ip_field .drop_box { display: none; width: 101%; max-height: 240px; min-height: 40px; position: absolute; top: 100%; left: -1px; z-index: 10; border: 1px solid #ddd; overflow: auto; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; background-color: #fff; }
 .carSearch_cont .detail_box .quick_search .ip_field .drop_box li { height: 40px; line-height: 40px; padding-left: 10px; font-size: 12px; cursor: pointer; }
@@ -1520,19 +1520,19 @@ a.cmBtnRe { display: inline-block; padding: 10px 30px; border: 1px solid #d42a35
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .list_price_area .fin_point{padding-top:8px; color:#888;}
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .list_price_area .list_fin_area .inp_text{display:inline-block; position:relative;}
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .list_price_area .list_fin_area .inp_text .unit{display:block; position:absolute; right:5px; top:8px;}
-.carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .list_price_area .list_fin_area input.type01 { display: inline-block; width: 93px; height: 30px; line-height: 28px; padding: 0 28px 0 10px; font-size: 12px; border: 1px solid #ddd; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; font-family: 'Noto Sans Korean'; text-align:right;}
-.carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .list_price_area .list_fin_area input.type02 { display: inline-block; width: 199px; height: 30px; line-height: 28px; padding: 0 28px 0 10px; font-size: 12px; border: 1px solid #ddd; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; font-family: 'Noto Sans Korean'; text-align:right;}
+.carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .list_price_area .list_fin_area input.type01 { display: inline-block; width: 93px; height: 30px; line-height: 28px; padding: 0 28px 0 10px; font-size: 12px; border: 1px solid #ddd; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; font-family: 'Segoe UI'; text-align:right;}
+.carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .list_price_area .list_fin_area input.type02 { display: inline-block; width: 199px; height: 30px; line-height: 28px; padding: 0 28px 0 10px; font-size: 12px; border: 1px solid #ddd; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; font-family: 'Segoe UI'; text-align:right;}
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .list_price_area .list_fin_area .wave { display: inline-block; vertical-align: middle; margin: 0 1px; }
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .list_price_area .list_fin_area a { display: inline-block; width: 51px; height: 32px; line-height: 30px; margin-left: 5px; text-align: center; vertical-align: middle; font-size: 12px; background-color: #888; color: #fff; }
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .several_area { display: none; margin-top:10px; border: 1px solid #dbdade; padding: 10px; background-color: #efefef; }
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .several_area .inp_text{display:inline-block; position:relative;}
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .several_area .inp_text .unit{display:block; position:absolute; right:5px; top:8px;}
-.carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .several_area input { display: inline-block; width: 81px; height: 32px; line-height: 28px; padding: 0 28px 0 10px; font-size: 12px; border: 1px solid #ddd; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; font-family: 'Noto Sans Korean'; }
+.carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .several_area input { display: inline-block; width: 81px; height: 32px; line-height: 28px; padding: 0 28px 0 10px; font-size: 12px; border: 1px solid #ddd; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; font-family: 'Segoe UI'; }
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .several_area .wave { display: inline-block; vertical-align: middle; margin: 0 1px; }
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .several_area a { display: inline-block; width: 51px; height: 32px; line-height: 32px; margin-left: 5px; text-align: center; vertical-align: middle; font-size: 12px; background-color: #888; color: #fff; }
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h03 .sub_type_list .more_btn{margin:15px 0 0 0;}
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h11 .several_area {display: none; margin-top:10px; border: 1px solid #dbdade; padding: 10px; background-color: #efefef; }
-.carSearch_cont .detail_box .search_list_wrap .list_h.list_h11 .several_area input { display: inline-block; width: 81px; height: 32px; line-height: 28px; padding: 0 10px; font-size: 12px; border: 1px solid #ddd; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; font-family: 'Noto Sans Korean'; }
+.carSearch_cont .detail_box .search_list_wrap .list_h.list_h11 .several_area input { display: inline-block; width: 81px; height: 32px; line-height: 28px; padding: 0 10px; font-size: 12px; border: 1px solid #ddd; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; font-family: 'Segoe UI'; }
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h11 .several_area .wave { display: inline-block; vertical-align: middle; margin: 0 1px; }
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h11 .several_area a { display: inline-block; width: 51px; height: 32px; line-height: 30px; margin-left: 5px; text-align: center; vertical-align: middle; font-size: 12px; background-color: #888; color: #fff;}
 .carSearch_cont .detail_box .search_list_wrap .list_h.list_h11 .sub_type_list .more_btn{margin:15px 0 0 0;}
@@ -1583,8 +1583,8 @@ a.cmBtnRe { display: inline-block; padding: 10px 30px; border: 1px solid #d42a35
 .carSearch_cont .result_box_wrap .until_box .top_field .search_area { float: right; width: 200px; position: relative; }
 .carSearch_cont .result_box_wrap .until_box .top_field .search_area:before, .carSearch_cont .result_box_wrap .until_box .top_field .search_area:after { content: ""; display: table; }
 .carSearch_cont .result_box_wrap .until_box .top_field .search_area:after { clear: both; }
-.carSearch_cont .result_box_wrap .until_box .top_field .search_area input { float: left; width: 140px; height: 35px; line-height: 33px; padding: 0 10px; border: 1px solid #ddd; font-size: 12px; color: #666; letter-spacing: -0.07em; vertical-align: middle; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; font-family: 'Noto Sans Korean'; }
-.carSearch_cont .result_box_wrap .until_box .top_field .search_area button { float: left; display: block; width: 60px; height: 35px; line-height: 35px; font-weight: 500; font-size: 13px; color: #fff; font-family: 'Noto Sans Korean'; border: 0; background-color: #888; cursor: pointer; }
+.carSearch_cont .result_box_wrap .until_box .top_field .search_area input { float: left; width: 140px; height: 35px; line-height: 33px; padding: 0 10px; border: 1px solid #ddd; font-size: 12px; color: #666; letter-spacing: -0.07em; vertical-align: middle; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; font-family: 'Segoe UI'; }
+.carSearch_cont .result_box_wrap .until_box .top_field .search_area button { float: left; display: block; width: 60px; height: 35px; line-height: 35px; font-weight: 500; font-size: 13px; color: #fff; font-family: 'Segoe UI'; border: 0; background-color: #888; cursor: pointer; }
 .carSearch_cont .result_box_wrap .until_box .align_field { height: 44px; margin-top: 5px; background-color: #fafafa; border-top: 1px solid #222; border-bottom: 1px solid #ddd; }
 .carSearch_cont .result_box_wrap .until_box .align_field:before, .carSearch_cont .result_box_wrap .until_box .align_field:after { content: ""; display: table; }
 .carSearch_cont .result_box_wrap .until_box .align_field:after { clear: both; }
